overflow fixed again and again

--- a/main.css
+++ b/main.css
@@ -311,7 +311,7 @@ blockquote {
 		position: fixed;
 		left: 12px;
 		top: 80px;
-		bottom: 12px;
+		bottom: -12px;
 		width: 78%;
 		max-width: 360px;
 		transform: translateX(-120%);
